--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,12 @@
 
 	<title>REST Roulette</title>
 
+	<link rel="icon" type="image/png" href="/static/assets/img/favicon.png">
+
 	<link href="{{ url_for('static', filename='css/min.css') }}" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type=text/javascript src="{{ url_for('static', filename='js/min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/min.js') }}"></script>
+
 
     <!-- Fonts and Material Icons -->
 	<link rel="stylesheet" as="font" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700|Material+Icons"/>
@@ -29,11 +32,12 @@
 
               <p class="ae-2 hero cropBottom margin-top-3">
                 <span class="opacity-8">
-                  <b>Play your luck in roulette.</b>
-                  <br>Free, open-source JSON REST API
-                  <br><br>
-                  <pre class="ae-3 hero"><b>GET</b> /api/play<br>Params: bet, wager
-                  </pre>
+              <b>Play your luck in roulette.</b>
+              <br>Free, open-source JSON REST API
+              <br><br>
+              <pre class="ae-3 hero"><b>GET</b> /api/play<br><br>Params:<br><u>bet</u>:</b> odd, even, low, high, red,<br> black, green, or [0 through 36]<br><b><u>wager</u>:</b> any number
+              <br><br>See GitHub for more documentation.
+              </pre>
             </span></p>
             </div>
 
@@ -41,14 +45,14 @@
           </div>
         </div>
       </div>
-      <div class="background" style="background-image:url(static/assets/img/background/bg.jpg)"></div>
+      <div class="background" style="background-image:url({{ url_for('static', filename='assets/img/background/bg.jpg') }})"></div>
     </section>
 
     <nav class="panel bottom   forceMobileView">
       <div class="sections desktop">
         <div class="center">
           <ul class="menu uppercase">
-            <li><a href="#">Github</a></li>
+            <li><a href="https://github.com/mar-cel/rest-roulette">Github</a></li>
           </ul>
         </div>
       </div>
