--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                   <br>Free, open-source JSON REST API
                   <br><br>
                   <pre class="ae-3 hero"><b>GET</b> /api/play<br><br><b>Params:</b><br><u>bet</u>:</b> odd, even, low, high, red,<br> black, green, or [0 through 36]<br><b><u>wager</u>:</b> any number
-                  <br><br>See GitHub for more documentation.
+                  <br><br>See <b><u><a href="https://github.com/mar-cel/rest-roulette">GitHub</a></u></b> for more documentation.
                     <br><br><b>Response:</b>
                   <div style="text-align: center;">
                     <div style="position: relative; text-align: left; margin-left:40%;"><text id="req_display_text"><script>document.write(JSON.stringify(JSON.parse('{{ req_display|safe }}'), null, 2));</script></text></div>
